@@ -1,5 +1,11 @@
 2010-03-04  Tom Tromey  <tromey@redhat.com>
 
+	* dwarf2read.c (skip_one_die) <DW_FORM_ref_addr>: Use offset size
+	in DWARF 3 and later.
+	(read_attribute_value) <DW_FORM_ref_addr>: Likewise.
+
+2010-03-04  Tom Tromey  <tromey@redhat.com>
+
 	* printcmd.c (printf_command): Pass dummy argument to
 	printf_filtered.
 
